# BLS-Witness-Encryption

./: .gitignore  CMakeLists.txt  README.md  setup.py
bindings/python/: CMakeLists.txt  README.md  benchmark.py  witencpy.cpp
src/: CMakeLists.txt  bench.cpp  test.cpp  witenc.cpp  witenc.hpp
